--- a/manifest.json
+++ b/manifest.json
@@ -5453,6 +5453,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestDarkspear.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestDarkspear.html",
+          "hash": "wMXdVqEir7g5h2Y59RWOMQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestDrektharsSpellbook.yml",
       "output": {
         ".html": {
@@ -5505,7 +5517,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Quests.Frostwolf.QuestThunderBluff.html",
-          "hash": "PLLNuNMuEflo0kOUp0EVjg=="
+          "hash": "41IwygxaHgUsQCbQF0Bewg=="
         }
       },
       "is_incremental": false,
@@ -5529,7 +5541,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Quests.Frostwolf.html",
-          "hash": "dEkHBF6gQrGdSm6puZg9cg=="
+          "hash": "jLCDtqJCzkksS9PbUrGpZg=="
         }
       },
       "is_incremental": false,
@@ -7881,7 +7893,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Setup.Legends.LegendFrostwolf.html",
-          "hash": "JgHdM99vrRalpXGv1G6YvA=="
+          "hash": "O7BL6w+BaoauSu3R5Oomig=="
         }
       },
       "is_incremental": false,
@@ -8757,7 +8769,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/toc.html",
-          "hash": "9APAaK8NqYwaP3Zsm7JjYw=="
+          "hash": "rQDSKycuYdOVx/FNP9PYeA=="
         }
       },
       "is_incremental": false,
@@ -8832,7 +8844,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 728,
+          "total_file_count": 729,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
